--- a/Project-Rural-Development/Rural Development/mainpage.html
+++ b/Project-Rural-Development/Rural Development/mainpage.html
@@ -116,12 +116,12 @@
        .view1{
         background: #d21054;
         align-items: center;
-        padding: 2px 2px 2px 2px;
+        padding: 2px 12px 2px 2px;
        }
 
        .view1:hover{
         background: #d21054;
-        padding: 2px 2px 2px 2px;
+        padding: 2px 12px 2px 2px;
         color: #f19797;
         align-items: center;
        }
@@ -129,10 +129,13 @@
        .container31{
         display: flex;
         margin-top: 20px;
+        margin-left: 100px;
        }
 
-       .container3{
+       .container3, .gallery1{
         width:1400px;
+        align-items: center;
+
        }
 
        .gallery{
@@ -257,27 +260,27 @@
             <div class="gallery1">
               <img src="icon8.png" alt="Photo">
             <a href="scheme.html">
-              <button class="view1"><h3 class="view">pictures</h3></button>
+              <button class="view1"><h3 class="view"><pre> Pictures</pre></h3></button>
             </a>
           </div>
 
           <div class="gallery1">
              <img src="video.png" alt="Photo">
             <a href="scheme.html">
-              <button class="view1"><h3 class="view">Videos</h3></button>
+              <button class="view1"><h3 class="view"><pre> Videos </pre></h3></button>
             </a>
           </div>
 
           <div class="gallery1">
             <img src="icons8-more-50.png" alt="Photo">
             <a href="scheme.html">
-              <button class="view1"><h3 class="view">More Schemes</h3></button>
+              <button class="view1"><h3 class="view"><pre> More Schemes</pre></h3></button>
             </a></div>
 
             <div class="gallery1">
             <img src="feedback.png" alt="Photo">
             <a href="scheme.html">
-              <button class="view1"><h3 class="view">Feedback</h3></button>
+              <button class="view1"><h3 class="view"><pre> Feedback</pre></h3></button>
             </a>
             </div>
 
