--- a/Project-Rural-Development/Rural Development/gallery.html
+++ b/Project-Rural-Development/Rural Development/gallery.html
@@ -148,6 +148,20 @@
         </div> 
     </div>
 
+    <div class="main">
+        <div class="img4">
+            <img src="image-78.png">
+        </div> 
+
+        <div class="img4">
+            <img src="images (7).jpg">
+        </div> 
+
+        <div class="img4">
+            <img src="images (6).jpg">
+        </div> 
+    </div>
+
     </section>
     
 </body>
