--- a/Project-Rural-Development/Rural Development/registerhealth.html
+++ b/Project-Rural-Development/Rural Development/registerhealth.html
@@ -90,6 +90,8 @@
     <section>
         <h2>Registration Form</h2>
         <p>Complete the registration form below to schedule your eye checkup for senior citizens. Please provide accurate information to help us better understand your needs and provide the best possible care.</p>
+        
+        <div class="Form">
         <form id="registrationForm">
             <label for="fullName">Full Name:</label>
             <input type="text" id="fullName" name="fullName" required>
@@ -102,10 +104,10 @@
 
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
-
            
             <button type="button" onclick="submitForm()">Submit</button>
         </form>
+    </div>
     </section>
 
     <section>
