--- a/Project-Rural-Development/Rural Development/learnmorehealth.html
+++ b/Project-Rural-Development/Rural Development/learnmorehealth.html
@@ -101,7 +101,7 @@
             <li><strong>12-15 months:</strong> MMR, Varicella, HepA</li>
             <li><strong>4-6 years:</strong> DTP, IPV, MMR, Varicella</li>
         </ul>
-        <a href="#" class="button">Download Full Schedule</a>
+        <a href="#polio.pdf" class="button">Download Full Schedule</a>
     </div>
     <div class="polio">
         <video src="polio2.mp4"  autoplay muted loop infinite alt="Polio">
