--- a/Project-Rural-Development/Rural Development/mainpage.html
+++ b/Project-Rural-Development/Rural Development/mainpage.html
@@ -221,14 +221,13 @@
           </div>
           <br>
               
-           <h222 class="contact"  id="help">Contact</h22><br>
+           <h222 class="contact" id="help">Contact</h222><br>
 
           <div class="help">
           
               <img class="img111" src="placeholder.png" alt=""><br>
-              <li>Indore Institute Of Science And Technology COLLAGE </li>
-              <br><br>
-              <li> Rau,Indore</li>
+              <pre><strong>Indore Institute Of Science And Technology COLLAGE</strong></pre>
+              <pre><strong> Rau,Indore</strong></pre>
       </div>
           <div class="help">
               <img class="img112" src="viber.png" alt=""><br>
