--- a/Project-Rural-Development/Rural Development/scheme.html
+++ b/Project-Rural-Development/Rural Development/scheme.html
@@ -146,14 +146,14 @@
 
 
 footer{
-  background: #a6a6ac;
+  background: #8383b1;
   margin-top: 200px;
   border-top: #cdcaca 2px solid ;
 }
 
 .container1,.footer-content{
   margin: 05px 0px 5px 0px;
-  background: #a6a6ac;
+  background: #8383b1;
   align-items: center;
   margin: 0px 0px 20px 300px ;
 }
@@ -163,20 +163,20 @@ footer{
   font-size: 30px;
   text-decoration: dotted rgb(246, 245, 245);
   margin-left: 30px;
-  background: #a6a6ac;
+  background: #8383b1;
 }
 
 .help{
   display: flex;
   margin-left: 30px;
-  background: #a6a6ac;
+  background: #8383b1;
   gap: 10px;
 }
 
 .help1{
   display: flex;
   margin-left: 30px;
-  background: #a6a6ac;
+  background: #8383b1;
   height: 60px;
   gap: 10px;
   
@@ -185,7 +185,7 @@ footer{
 .help2{
   display: flex;
   margin-left: 30px;
-  background: #a6a6ac;
+  background: #8383b1;
   height: 30px;
   gap: 10px;
   
