--- a/Project-Rural-Development/Rural Development/gallery.html
+++ b/Project-Rural-Development/Rural Development/gallery.html
@@ -80,6 +80,61 @@
                 width: 470px;
             }
 
+footer{
+    background: #8383b1;
+    border-top: #f5f5f7 2px solid ;
+    width:1450px;
+    height: auto;
+  }
+  
+  .container1,.footer-content{
+    background: #8383b1;
+    align-items: center;
+    padding:0px 0px 20px 0px;
+    margin: 0px 0px 0px 300px ;
+  }
+  
+  .contact ,h222 {
+    display: flex;
+    font-size: 30px;
+    margin: 10px 0px 0px 30px;
+  }
+  
+  .help{
+    display: flex;
+    margin-left: 30px;
+    gap: 10px;
+  }
+  
+  .help1{
+    display: flex;
+    margin-left: 30px;
+    height: 60px;
+    gap: 10px;
+  }
+  
+  .help2{
+    display: flex;
+    margin-left: 30px;
+    height: 30px;
+    gap: 10px; 
+  }
+  
+  .img111{
+    width: 20px;
+    height: 20px;
+    padding: 15px 4px 0px 3px ;
+  }
+  
+  .img112{
+    width: 20px;
+    height: 20px;
+    padding: 15px 4px 0px 3px ;
+  }
+  .help ,.phone1{
+    padding: 0px 4px 0px 3px ;
+  }
+
 
     </style>
 </head>
@@ -163,6 +218,33 @@
     </div>
 
     </section>
+
+    <footer class="footer" id="contact">
+        <h222 class="contact" id="help">Contact</h222><br>
+
+        <div class="help">
+          <div class="location"><img class="img111" src="placeholder.png" alt="Location"></div>
+          <div class="location1"><p>Indore Institute Of Science And Technology,College</p>
+          <p>Rau,Indore</p></div>
+       </div>
+  
+        <div class="help2">
+          <div><img class="img112" src="viber.png" alt="Contact"></div>
+            <div class="phone1"><p>9522303045</p></div>
+        </div>
+  
+        <div class="help1">
+            <div class="gmail"><img class="img112" src="gmail.png" alt="Gmail"></div>
+            <div class="gmail"><p>Dynoorg@gmail.com</p></div>
+        </div>
+
+            <div class="container1">
+                <div class="footer-content">
+                    <p>© 2024 Dyno Rural Development. All rights reserved.</p>
+                </div>
+        </div>
+    </footer>
+
     
 </body>
 </html>
